Button text not centered fix
- The text on browser buttons on the tutorial page are now centered (bug caused by f17ed88)

--- a/css/main.css
+++ b/css/main.css
@@ -575,7 +575,7 @@ hr {
     flex-direction: column;
     gap: 10px;
   }
-  .grid.browsers p {
+  .grid.browsers a {
     margin-bottom: 15px;
     text-align: center;
   }
